Fixed rss icon size on mobile.

--- a/src/css/redesign.css
+++ b/src/css/redesign.css
@@ -179,6 +179,9 @@
 .redesign-content .sl {
   min-height: 105px; }
 
+.redesign-content .rss-icon {
+  width: 16px; }
+
 /*********************************************************
     Carousel
 *********************************************************/
